--- a/AntonApp/Views/Home/Index.cshtml
+++ b/AntonApp/Views/Home/Index.cshtml
@@ -15,13 +15,16 @@
                         <div class="col-12">
                             <p>
                                 @name | Price: $@Model.Items.Where(p => p.Name == name).FirstOrDefault().Price | Stock: @Model.Items.Where(p => p.Name == name && p.Status == 1).Count()<br />
-                                @if (Model.Items.Where(p => p.Name == name && p.Status == 1).Count() != 0)
+                                @if (User.Identity.IsAuthenticated)
                                 {
-                                    <button class="btn btn-sm btn-outline-secondary" style="color:deepskyblue;" asp-controller="Home" asp-action="BuyProduct" name="submitButton" value="@name">Buy</button>
-                                }
-                                else
-                                {
-                                    <button disabled="disabled" class="btn btn-sm btn-outline-secondary" style="color:deepskyblue;" asp-controller="Home" asp-action="BuyProduct" name="submitButton" value="@name">Buy</button>
+                                    @if (Model.Items.Where(p => p.Name == name && p.Status == 1).Count() != 0)
+                                    {
+                                        <button class="btn btn-sm btn-outline-secondary" style="color:deepskyblue;" asp-controller="Home" asp-action="BuyProduct" name="submitButton" value="@name">Buy</button>
+                                    }
+                                    else
+                                    {
+                                        <button disabled="disabled" class="btn btn-sm btn-outline-secondary" style="color:deepskyblue;" name="submitButton">Buy</button>
+                                    }
                                 }
                             </p>
                         </div>
@@ -32,7 +35,7 @@
         <div class="col-4">
             <form method="post">
                 <h3>In Delivery</h3>
-                @foreach (var item in Model.Items.Where(p => p.Status == 2))
+                @foreach (var item in Model.Items.Where(p => p.Status == 3))
                 {
                     <div class="row"><hr width="100%" /></div>
                     <div class="row">
@@ -49,7 +52,7 @@
         <div class="col-4">
             <form method="post">
                 <h3>Completed</h3>
-                @foreach (var item in Model.Items.Where(p => p.Status == 3))
+                @foreach (var item in Model.Items.Where(p => p.Status == 4))
                 {
                     <div class="row"><hr width="100%" /></div>
                     <div class="row">
@@ -63,4 +66,37 @@
             </form>
         </div>
     </div>
+    @if (User.IsInRole("Admin"))
+    {
+        <div class="row">
+            <div>
+                <div class="col-12">
+                    @foreach (var item in Model.Requests.Where(p => p.status == 0))
+                    {
+                        <form action="/" method="post">
+                            <div class="row"><hr width="100%" /></div>
+                            <div class="row">
+                                <div class="col-12">
+                                    <p>
+                                        @item.Product | Destination: @item.Destination <br />
+                                        <input type="text" asp-for="RequestId" value="@item.Id" hidden="hidden" />
+                                        <select asp-items="@item.AvailableWarehouses" asp-for="Warehouse"></select>
+                                        @if (item.AvailableWarehouses.Count > 0)
+                                        {
+                                            <button class="btn btn-sm btn-outline-secondary" style="color:deepskyblue;" asp-controller="Home" asp-action="ConfirmRequest">Confirm</button>
+                                        }
+                                        else
+                                        {
+
+                                            <button disabled="disabled" class="btn btn-sm btn-outline-secondary" style="color:deepskyblue;">Confirm</button>
+                                        }
+                                    </p>
+                                </div>
+                            </div>
+                        </form>
+                    }
+                </div>
+            </div>
+        </div>
+    }
 </div>
